--- a/package.json
+++ b/package.json
@@ -39,7 +39,13 @@
     "ts-standard": "^12.0.2",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
-    "vitest": "^0.34.2"
+    "vitest": "^0.34.2",
+    "@vitejs/plugin-react": "^4.0.1",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "prettier": "3.0.0"
   },
   "eslintConfig": {
     "extends": [
